--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "instavideodownloader",
   "version": "1.0.0",
-  "description": "Backend for Instagram Downloader",
+  "description": "Backend for Instagram Downloader with RapidAPI",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
@@ -9,10 +9,9 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.19.2",
-    "instagram-url-direct": "^1.0.15"
+    "axios": "^1.6.8"
   },
   "engines": {
     "node": "18.x"
-  },
-  "keywords": []
+  }
 }
